# protobuf-logger-app

./: .gitignore  README.md  pyproject.toml
proto/: log_message.proto
scripts/: compile_proto.py  compile_protos.py  lint_and_check.py  run_lint_and_check.py  run_pipeline.py  run_protoc.py
src/client_app/: log_message_pb2.py  log_message_pb2.pyi  my_naive_app.py
src/logger_app/: my_logger_app.py
src/naive_client_app/: log_message_pb2.py  my_naive_app.py
src/receiver_app_logger/: log_message_pb2.pyi  logger.py
tests/: test_logger.py
