# Poetry configurations
[tool.poetry]
name = "receiver-app-logger"
version = "0.1.0"
description = "Tonies Job Interview"
authors = ["Thiago Genez <thiagogenez@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^4.25.2"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
pylint = "^3.1.0"
mypy = "^1.9.0"
docformatter = "^1.7.5"
types-protobuf = "^4.24.0.20240311"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
receiver-app-logger = 'receiver_app_logger.logger:main'
lint-and-check = "scripts.lint_and_check:main"
compile-protos = "scripts.compile_protos:main"

# Black configurations
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Docformatter configurations
[tool.docformatter]
wrap-summaries = 100
wrap-descriptions = 100
wrap-arguments = 100
wrap-returns = 100

# Pylint configurations
[tool.pylint."MESSAGES CONTROL"]
disable = ["logging-fstring-interpolation", "redefined-outer-name"]

[tool.pylint.FORMAT]
max-line-length = 100
